# http-c

./: .gitignore  CMakeLists.txt  CNAME  HTTP10_IMPLEMENTATION_PLAN.md  Makefile  PLAN.md  README.md  example.c  http.h  index.html
.github/workflows/: ci.yml
tests/: doctest_all.cpp  doctest_example.cpp  doctest_main.cpp  test_framework.h  test_mem_pool.c  test_mem_pool.cpp  test_parser.c  test_parser.cpp  test_runner.c  test_runner.cpp  test_server.c  test_server.cpp  test_status.c  test_status.cpp  test_utils.c  test_utils.cpp
